--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,1 +1,15 @@
-@import 'bootstrap'
+@import 'bootstrap';
+
+body{
+  background:#0099CC;
+}
+
+.container{
+  background:white;
+  padding:20px;
+  margin-top:20px;
+}
+
+.header1{
+  color:#FF33CC; 
+}
