--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,3 +1,3 @@
-<h1>Do you want us to bake?</h1>
+<h1 class="header1">Do you want us to bake?</h1>
 
-<%= link_to 'Yes!', new_request_path %>
+<%= link_to 'Yes!', new_request_path, class: "btn btn-success" %>
