Further cleanup and cosmetic improvement

--- a/app/views/bakers_mailer/request_email.html.erb
+++ b/app/views/bakers_mailer/request_email.html.erb
@@ -1,8 +1,7 @@
 A baking request was just posted.  Check it out and see if you can help! :)
 <br>
 <br>
-from <%= @request.name %> 
-at <%= @request.email %>
+URL at: 'our website'.com/requests/<%= @request.id %> ~ from <%= @request.name %> ~ at <%= @request.email %>
 <br>
 <%= @request.description %>
   
