--- a/app/views/bakers_mailer/request_email.html.erb
+++ b/app/views/bakers_mailer/request_email.html.erb
@@ -1,4 +1,5 @@
 A baking request was just posted.  Check it out and see if you can help! :)
+Just as a reminder, to take a request, you'll need to be logged in.
 <br>
 <br>
 from <%= link_to @request.name, request_url(@request) %> ~ at <%= @request.email %>
