--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -13,10 +13,11 @@
   <%= @request.description %>
 </p>
 
-<%= form_for @request do |f| %>
-<%= f.hidden_field :baker_id, value: current_baker.id %>
-
-<%= f.submit "Assign this to me!" %>
+<% if current_baker.present? %>
+  <%= form_for @request do |f| %>
+    <%= f.hidden_field :baker_id, value: current_baker.id %>
+    <%= f.submit "Assign this to me!" %>
+  <% end %>
 <% end %>
 
 <%= link_to 'Back to home', requests_path %>
